[package]
name = "dinter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
const-decoder = "0.3.0"
env_logger = "0.10.0"
hex = "0.4.3"
hex-literal = "0.3.4"
ring-compat = "0.4.1"
serde = "1.0.148"
serde_json = "1.0.89"
